Complete overhaul. Fresh new.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "portfolio",
-  "description": "A portfolio website template that helps you showcase your work, projects and skills as a software developer or freelancer.",
-  "homepage": "http://hashirshoaeb.com",
+  "description": "Personal Website of Nachmi Kott. Forked from hashirshoaeb/portfolio",
+  "homepage": "http://nachmikott.com",
   "version": "0.2.0",
-  "license": "MIT",
   "private": true,
   "author": {
-    "name": "Hashir Shoaib",
-    "email": "hashirshoaeb@gmail.com",
-    "url": "https://github.com/hashirshoaeb"
+    "name": "Nachmi Kott ",
+    "email": "nachmikott@gmail.com",
+    "url": "https://github.com/nachmikott"
   },
   "scripts": {
     "prebuild": "node scripts/favicons.js",
@@ -17,8 +16,7 @@
     "start": "next start",
     "export": "next export",
     "predeploy": "npm run build && npm run export && touch ./out/.nojekyll",
-    "deploy": "npm run custom-domain && node scripts/pages.js hashirshoaeb master",
-    "custom-domain": "node scripts/cname.js hashirshoaeb.com www.hashirshoaeb.com",
+    "custom-domain": "node scripts/cname.js nachmikott.com www.nachmikott.com",
     "lint": "next lint"
   },
   "dependencies": {
@@ -36,6 +34,7 @@
     "eslint-config-next": "12.3.0",
     "favicons": "^6.2.2",
     "gh-pages": "^4.0.0",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "jimp": "^0.22.12"
   }
 }
