--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "export": "next export",
+    "export": "next export -o docs/",
     "predeploy": "npm run build && npm run export && touch ./out/.nojekyll",
     "custom-domain": "node scripts/cname.js nachmikott.com www.nachmikott.com",
     "lint": "next lint"
