--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "personal website",
   "description": "Personal Website of Nachmi Kott. Forked from hashirshoaeb/portfolio",
   "homepage": "http://nachmikott.com",
   "version": "0.2.0",
