upated the domain examples for the CNAME setup script

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,12 +7,10 @@ name: Node.js CI
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
   build:
-    runs-on: macos-11
+    runs-on: macos-latest
 
     # env:
     # Repository name
