--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "bootstrap": "^5.2.1",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "favicons": "^6.2.2",
     "gh-pages": "^4.0.0",
-    "sass": "^1.54.9",
-    "jimp": "^0.22.12"
+    "jimp": "^0.22.12",
+    "sass": "^1.54.9"
   }
 }
