--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
     "yaml": "^2.8.1"
   },
   "devDependencies": {
