--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.2.1",
-    "next": "12.3.0",
+    "next": "^16.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^10.0.0",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "yaml": "^2.8.1"
@@ -36,8 +37,8 @@
   "devDependencies": {
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
-    "favicons": "^6.2.2",
-    "gh-pages": "^4.0.0",
+    "favicons": "^7.2.0",
+    "gh-pages": "^6.3.0",
     "jimp": "^0.22.12",
     "sass": "^1.54.9"
   }
