--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "next dev",
     "start": "next start",
     "export": "next export",
-    "predeploy": "npm run build && npm run export && touch ./out/.nojekyll",
+    "predeploy": "npm run build && touch ./out/.nojekyll",
     "deploy": "npm run custom-domain && node scripts/pages.js nachmikott gh-pages",
     "custom-domain": "node scripts/cname.js nachmikott.com www.nachmikott.com",
     "lint": "next lint"
