--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "export": "next export",
+    "export": "next build",
     "predeploy": "npm run build && touch ./out/.nojekyll",
     "deploy": "npm run custom-domain && node scripts/pages.js nachmikott gh-pages",
     "custom-domain": "node scripts/cname.js nachmikott.com www.nachmikott.com",
